Add the ability to specify extra socket options

--- a/nodejs.config.js.example
+++ b/nodejs.config.js.example
@@ -97,6 +97,7 @@ settings = {
   transports: ['websocket', 'polling'],
   jsMinification: true,
   jsEtag: true,
-  logLevel: 1
+  logLevel: 1,
+  socketOptions: {}
 };
 
